# grolts-llm

./: .gitignore  CITATION.cff  GRoLTS.csv  LICENSE  README.md  env.example  eval.ipynb  firstfull.py  grolts_llms.pptx  pyproject.toml  requirements.txt
data/: Appendix C - screening papers with GRoLTS - final.xlsx
data_out/: gpt-3.5-p2.csv  gpt-3.5-p3.csv  human_labels.csv  human_labels.xlsx
deprecated/: 500-phi-4-3-large-p3-q19.csv  bge-embeddings.py  env.no_chunking.example  eval.ipynb  gpt-3.5-CoT.py  gpt-3.5-new.py  gpt-3.5-replication.py  gpt-4o-new.py  grolts_prompts.py  groq_new.py  img_extraction.ipynb  main_surf.py  o1.py  questions.txt  surf.sh
eval/: analysis_accuracy.ipynb  analysis_rank.ipynb  combine_outputs.ipynb  eval.ipynb  per_case_study_comparison.ipynb  process_batch_result.py  results_figures.ipynb
foras/: process_batch_result.ipynb  transform_raw_data.py
src/: bge-embeddings.py  embed.py  env.example  env.no_chunking.example  eval.ipynb  generate.py  generate_batch.py  generate_batches.py  generate_embeddings.py  generate_local.py  generate_markdown.sh  generate_responses.py  generate_responses_llama.py  generate_responses_mistral.py  generate_responses_phi.py  generate_responses_qwen3.py  generate_responses_qwen3_next.py  gpt-3.5-CoT.py  gpt-3.5-new.py  gpt-3.5-replication.py  gpt-4o-new.py  gpt-4o-replication.py  grolts_prompts.py  grolts_questions.py  groq_new.py  main.py  main_no_chunking.py  main_no_chunking_surf.py  main_surf.py  o1.py  process_batch_result.ipynb  run_generate_embeddings.sh  run_generate_responses.sh  surf.sh  (+5 more)
(+88 files in other folders)
