[project]
name = "grolts-llm"
version = "0.1.0"
description = "GRoLTS Checklist but for LLMs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.9.0",
    "chromadb>=1.0.13",
    "haystack-ai>=2.15.0",
    "marker-pdf>=1.8.0",
    "nltk>=3.9.1",
    "openai>=1.93.0",
    "pandas>=2.3.0",
    "psutil>=7.0.0",
    "sentence-transformers>=4.1.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.53.0",
]
